[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Zhubieyu.png" type="Texture" id=1]
[ext_resource path="res://assets/light.png" type="Texture" id=2]
[ext_resource path="res://src/Areas/Poison.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Actors/Zhubieyu.gd" type="Script" id=4]
[ext_resource path="res://src/Objects/CorruptedCannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/playerParticle.png" type="Texture" id=6]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=7]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 320.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 245.16
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
tangential_accel = 100.0
scale = 2.0
color = Color( 0.121569, 0.0705882, 0.254902, 1 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 160.0
height = 240.0

[sub_resource type="Animation" id=3]
resource_name = "angry"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.574349, 1, 0.574349 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -160 ), Vector2( 0, -48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.0, 8.0, -8.0, 8.0, -8.0, 8.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/CorruptedCannon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, -30.4 ), Vector2( 40, -40 ), Vector2( 32, -30.4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/CorruptedCannon2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -32, -30.4 ), Vector2( -40, -40 ), Vector2( -32, -30.4 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 23 ), Vector2( -1, -89 ), Vector2( -1, 23 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StompArea/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -160 ), Vector2( 0, -272 ), Vector2( 0, -160 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lift_off"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "charge"
length = 1.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.329877, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ChargeParticles:amount")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 128 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8, 0.9, 1, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( 0, -80 ), Vector2( 2.98023e-07, 3.8147e-06 ), Vector2( 2.23517e-07, -80 ), Vector2( 2.23517e-07, -7.62939e-06 ), Vector2( 0, -48 ), Vector2( 0, -48 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 5, 4 ), Vector2( 5, 5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChargeParticles:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "begin_ramming"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 50.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.7, 2.64 ]
}

[sub_resource type="Animation" id=5]
resource_name = "rest"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.176777, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_relax"
} ]
}

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -48 ), Vector2( -40, -48 ), Vector2( 40, -48 ), Vector2( -80, -48 ), Vector2( 80, -48 ), Vector2( -40, -48 ), Vector2( 40, -48 ), Vector2( 0, -48 ) ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 120.0
height = 160.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[node name="Zhubieyu" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 8
script = ExtResource( 4 )

[node name="ChargeParticles" type="Particles2D" parent="."]
emitting = false
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 6 )

[node name="PoisonBreath" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 320 )
scale = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="CorruptedCannon" parent="Sprite" instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( 32, -30.4 )
rotation = 0.785398
scale = Vector2( 0.2, 0.2 )
shot_dir = Vector2( 1, -1 )

[node name="CorruptedCannon2" parent="Sprite" instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( -32, -30.4 )
rotation = -0.785398
scale = Vector2( 0.2, 0.2 )
shot_dir = Vector2( -1, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 23 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 5.0
color = Color( 0, 0, 0, 1 )
energy = 0.7
mode = 2
range_layer_min = -100

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/angry = SubResource( 3 )
anims/charge = SubResource( 4 )
anims/fade_out = SubResource( 10 )
anims/rest = SubResource( 5 )
anims/shake = SubResource( 6 )

[node name="FlyTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="StompArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( 0, -160 )
rotation = 1.5708
shape = SubResource( 7 )
disabled = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LandTimer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="HealthBar" type="ProgressBar" parent="Node2D"]
margin_left = -200.0
margin_top = -400.0
margin_right = 200.0
margin_bottom = -346.0
theme = ExtResource( 7 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 3.0
step = 1.0
value = 3.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="FlyTimer" to="." method="_on_FlyTimer_timeout"]
[connection signal="body_entered" from="StompArea" to="." method="_on_StompArea_body_entered"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
[connection signal="timeout" from="LandTimer" to="." method="_on_LandTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
